--- a/examples/rag_example.ipynb
+++ b/examples/rag_example.ipynb
@@ -67,11 +67,11 @@
     "    return docs\n",
     "\n",
     "docs = []\n",
-    "docs += json_to_docs(\"data/osdi_atc25.json\")\n",
-    "docs += json_to_docs(\"data/osdi24_sessions.json\")\n",
-    "docs += json_to_docs(\"data/nsdi25_sessions.json\")\n",
-    "docs += json_to_docs(\"data/sosp24_sessions.json\")\n",
-    "docs += json_to_docs(\"data/eurosys25_sessions.json\")\n",
+    "docs += json_to_docs(\"data/original/osdi_atc25.json\")\n",
+    "# docs += json_to_docs(\"data/original/osdi24_sessions.json\")\n",
+    "# docs += json_to_docs(\"data/original/nsdi25_sessions.json\")\n",
+    "# docs += json_to_docs(\"data/original/sosp24_sessions.json\")\n",
+    "# docs += json_to_docs(\"data/original/eurosys25_sessions.json\")\n",
     "        "
    ]
   },
@@ -157,50 +157,6 @@
    "source": [
     "response = graph.invoke({\"question\": \"Point out a list of relevant papers for LLM inference\"})\n",
     "print(response[\"answer\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a676209e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# query = \"Give a list of relevant papers for LLM inference, LLM serving, serverless, large models.\"\n",
-    "query = \"Large language model (LLM) applications are evolving beyond simple chatbots into dynamic, general-purpose agentic programs, which scale LLM calls and output tokens to help AI agents reason, explore, and solve complex tasks. However, existing LLM serving systems ignore dependencies between programs and calls, missing significant opportunities for optimization. Our analysis reveals that programs submitted to LLM serving engines experience long cumulative wait times, primarily due to head-of-line blocking at both the individual LLM request and the program.  To address this, we introduce Autellix, an LLM serving system that treats programs as first-class citizens to minimize their end-to-end latencies. Autellix intercepts LLM calls submitted by programs, enriching schedulers with programlevel context. We propose two scheduling algorithms—for single-threaded and distributed programs—that preempt and prioritize LLM calls based on their programs’ previously completed calls. Our evaluation demonstrates that across diverse LLMs and agentic workloads, Autellix improves throughput of programs by 4-15× at the same latency compared to state-of-the-art systems, such as vLLM.\"\n",
-    "docs = vector_store.similarity_search(query, k=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b18b2826",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for doc in docs:\n",
-    "\tprint(f\"{doc.metadata['title']} ({doc.metadata['session']})\")\n",
-    "\tprint(doc.page_content)\n",
-    "\tprint(doc.metadata[\"link\"])\n",
-    "\tprint()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "827fc1a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Merge this repo with my conference scraper\n",
-    "# TODO: Add the conferences names and dates to the metadata\n",
-    "# TODO: Add more conferences (MLSys, HPCA, ISCA), now I can realistically process all of this information\n",
-    "# TODO: Add separate sets of AI conferences (NeurIPS, ICML, ICLR, etc.)\n",
-    "# TODO: Add additional data sources (e.g. arxiv, email feeds, blogs)\n",
-    "# TODO: Experiment with better / different embedding models\n",
-    "# TODO: Add a way of offline storing the embedding databases for different groups of papers / conferences\n",
-    "# TODO: Run some kind of cronjob that processes data feeds and alerts me of new relevant information, storing any information that was relevant\n",
-    "# TODO: Experiment with better ways of doing the actual similarity search, like what queries I should use.\n"
    ]
   }
  ],
